[project]
name = "aoc"
version = "0.1.0"
description = ""
authors = [{ name = "jaredculp", email = "jared@culp.dev" }]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "requests",
    "python-dotenv",
    "enlighten",
    "tqdm",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
